filtro en reporte y producto con nombre canonico